--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>
 
         </div>
-    <img class="main-img" src="../restaurant/assets/images/food/restr.jpg.jpg" alt=""width="100%;"height="70%;">
+    <img class="main-img" src="assets/images/food/restr.jpg.jpg" alt=""width="100%;"height="70%;">
 <div class="box">
 
     <h2>Welcome</h2>
