--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="opt">
         <form action="" method="POST">
             <input type="button" value="Start Now">
+            <a href="./pages/menu.html">Menu</a>
         </form>
 
     </div>
